--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
+    <link rel="stylesheet" href="/css/marx.min.css">
   </head>
   <body>
     <header>
@@ -24,7 +25,7 @@
 
     <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
 
-      <!-- Delete this message -->
+      <!-- Delete this message
       <div class="warning">
         <ol>
           <li>Edit the <code>_data/metadata.json</code> with your blog’s information.</li>
@@ -33,13 +34,19 @@
         </ol>
         <p><em>This is an <a href="https://www.11ty.dev/">Eleventy project</a> created from the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code> repo</a>.</em></p>
       </div>
-      <!-- Stop deleting -->
+      Stop deleting -->
 
       {{ content | safe }}
     </main>
 
-    <footer></footer>
+ <footer>         
+   &copy
+   <script>
+      document.write(new Date().getFullYear());
+   </script> 
+Matt O'Leary and Tom O'Leary | Design by <a href="https://olearystudios.com">O'Leary Studios</a>
 
+    </footer>
     <!-- Current page: {{ page.url | url }} -->
   </body>
 </html>
