--- a/css/index.css
+++ b/css/index.css
@@ -20,14 +20,22 @@ body {
   font-family: -apple-system, system-ui, sans-serif;
   color: var(--darkgray);
   background-color: var(--white);
+;
 }
+
+p {
+  font-size: 18px;
+  line-height: 3rem;
+}
+
+
 p:last-child {
   margin-bottom: 0;
 }
 p,
 .tmpl-post li,
 img {
-  max-width: 37.5em; /* 600px /16 */
+  max-width: 768px; /* 600px /16 */
 }
 p,
 .tmpl-post li {
@@ -134,9 +142,14 @@ code {
 .nav {
   padding: 0;
   list-style: none;
-  float: left;
+  float: right;
   margin-left: 1em;
 }
+
+.nav img {
+  max-height: 2rem;
+}
+
 .nav-item {
   display: inline-block;
   margin-right: 1em;
@@ -244,4 +257,71 @@ a[href].direct-link:focus:visited,
 :hover > a[href].direct-link,
 :hover > a[href].direct-link:visited {
   color: #aaa;
+}
+
+.biglogo {
+  max-width: 14rem;
+}
+
+.logo {
+  display: grid;
+  place-content: center;
+  grid-template-columns: 222px;
+  grid-template-rows: auto;
+}
+
+.logo img {
+  margin: 2rem 0 1rem 0;
+}
+
+img.left {
+  float: left;
+  margin: .5rem 1rem 1rem 0;
+}
+
+p {
+  line-height: 1.75;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: inherit;
+  font-family: inherit;
+  line-height: 1.2;
+  font-weight: 800 !important;
+  margin: 2rem 0 1rem 0;
+}
+
+.grid {
+  display: grid !important; 
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-gap: 4em;
+  margin-bottom: 1em;
+}
+
+a {
+  text-decoration: underline !important;
+  color: #00AA55 !important;
+}
+
+header a {
+  text-decoration: none !important;
+  color: #333 !important;
+}
+
+h1 .home a {
+  margin-top: none !important;
+}
+
+a.direct-link {
+  display: none;
+}
+
+
+.nav-item-active {
+  text-decoration: none;
+  color: #00AA55 !important;
+}
+
+footer {
+font-size: 14px;
 }
