--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -2,6 +2,8 @@
 layout: layouts/base.njk
 templateClass: tmpl-post
 ---
+<main>
+
 <h1>{{ title }}</h1>
 
 <!-- <time datetime="{{ page.date | htmlDateString }}">{{ page.date | readableDate }}</time> -->
@@ -21,3 +23,5 @@ templateClass: tmpl-post
   {%- if previousPost %}<li>Previous: <a href="{{ previousPost.url | url }}">{{ previousPost.data.title }}</a></li>{% endif %}
 </ul>
 {%- endif %}
+
+</main>
