--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@ p:last-child {
 p,
 .tmpl-post li,
 img {
-  max-width: 768px; /* 600px /16 */
+  max-width: 56rem; /* 600px /16 */
 }
 p,
 .tmpl-post li {
@@ -328,7 +328,7 @@ font-size: 14px;
 
 header {
   border-bottom: 1px dashed var(--lightgray);
-  max-width: 46rem;
+  max-width: 56rem;
 }
 
 header h1 a {
