--- a/css/marx.styl.css
+++ b/css/marx.styl.css
@@ -261,7 +261,7 @@ summary {
 main {
   display: block;
   margin: 0 auto;
-  max-width: 768px;
+  max-width: 56rem;
   padding: 0 16px 16px;
 }
 footer {
